--- a/translate.html
+++ b/translate.html
@@ -23,7 +23,7 @@
           </div>
       
           <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-            <h1 class="display-4 fw-normal">Trnslate</h1>
+            <h1 class="display-4 fw-normal">Translate</h1>
             <!-- <p class="fs-5 text-muted">Translasi sunda - indonesia menggunakan stemming dan Seq2Seq</p> -->
           </div>
         </header>
